understanding the quasar layout, quasar styling flow, removing examples, adding a basic A4 format for the curriculum

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,21 @@
 // app global css in SCSS form
+body {
+  background: #333;
+}
+#page-container {
+  background: white;
+  width: 21cm;
+  height: auto;
+  // height: 29.7cm;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 0.5cm;
+  box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
+}
+@media print {
+  body,
+  #page-container {
+    margin: 0;
+    box-shadow: 0;
+  }
+}
