adding content, adding icons, avatar, the typography, the spacing, the layout system. Wow I love it

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -12,6 +12,15 @@ body {
   margin-bottom: 0.5cm;
   box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
 }
+.util-background-color-blue {
+  background-color: $blue-14;
+}
+.util-text-white {
+  color: #fff;
+}
+.util-text-blue {
+  color: $blue-14;
+}
 @media print {
   body,
   #page-container {
