Adding experience as a compoenent, added data to fill the experience

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -19,7 +19,9 @@ body {
   font-size: 1.5rem;
 }
 // Utils and helpers
-
+.section-title {
+  background-color: rgb(226, 226, 226);
+}
 .likedin-color {
   color: #0a66c2;
 }
