Added some breakpoint for responsive view

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -115,3 +115,14 @@ body {
     box-shadow: none;
   }
 }
+
+@media screen and (max-width: 599px) {
+  #page-container {
+    width: 100%;
+    margin: 0;
+    box-shadow: none;
+  }
+  #training-container .q-timeline__heading {
+    left: -40px !important;
+  }
+}
